fix border line collapsable share

--- a/src/scss/pages/_design.scss
+++ b/src/scss/pages/_design.scss
@@ -2,6 +2,10 @@
   padding-top: 27px;
   border-bottom: 1px solid $colorFooter;
 }
+.collapsable3 {
+  border-bottom: none;
+}
+
 .header-container {
   display: flex;
   flex-direction: row;
